# nuascn

./: .gitignore  Cargo.toml  README.md  nuascn  tvshows.list.template
src/: main.rs
