[package]
name = "nuascn"
version = "0.1.1"
edition = "2024"

[dependencies]
rss = "2.0.12"
scraper = "0.24.0"
reqwest = { version="0.12.24", features = ["json", "gzip", "deflate", "brotli" ,"rustls-tls"] }
tokio = { version="1.48.0", features = ["full"] }
futures = "0.3.31"
url = "2.5.7"
clap = "4.5.51"
anyhow = "1.0.100"
chrono = "0.4.42"
regex = "1.12.2"
serde_json = "1.0.145"
log = "0.4.28"
rand_agents = "1.0.0"
log4rs = "1.4.0"
fs_extra = "1.3.0"
